# kirie

./: .gitignore  Cargo.toml  README.md
.github/actions/release-setup/: action.yml
.github/workflows/: ci.yml  release.yml
crates/kirie/: CHANGELOG.md  Cargo.toml
crates/kirie-audio/: CHANGELOG.md  Cargo.toml
crates/kirie-audio/src/: automute.rs  capture.rs  dsp.rs  lib.rs  spectrum.rs  worker.rs
crates/kirie-audio/tests/: integration.rs
crates/kirie-bake/: CHANGELOG.md  Cargo.toml
crates/kirie-bake/src/: baker.rs  bundle.rs  cache.rs  error.rs  gc.rs  key.rs  lib.rs
crates/kirie-bake/tests/: baker.rs  bundle.rs  corpus.rs
crates/kirie-formats/: CHANGELOG.md  Cargo.toml
crates/kirie-formats/src/: lib.rs  model.rs  pkg.rs  project.rs  tex.rs
crates/kirie-formats/tests/: corpus.rs
crates/kirie-ipc/: CHANGELOG.md  Cargo.toml
crates/kirie-ipc/examples/: compat_server.rs
crates/kirie-ipc/src/: command.rs  error.rs  event.rs  lib.rs  server.rs  status.rs
crates/kirie-ipc/tests/: socket.rs
crates/kirie-launcher/src/: main.rs
crates/kirie-platform/: CHANGELOG.md  Cargo.toml
crates/kirie-platform/examples/: layer_clear.rs
crates/kirie-platform/src/: backend.rs  error.rs  gpu.rs  lib.rs  output.rs  platform.rs  pointer.rs  renderer.rs  test_pattern.rs  x11.rs
crates/kirie-platform/tests/: stack.rs
crates/kirie-render/: CHANGELOG.md  Cargo.toml
crates/kirie-render/examples/: image_wall.rs
crates/kirie-render/src/: content.rs  error.rs  lib.rs  renderer.rs  scaling.rs  schedule.rs  shader.wgsl
crates/kirie-render/src/media/: art.rs  metadata.rs  mod.rs  state.rs  worker.rs
crates/kirie-render/src/particle/: emitter.rs  initializer.rs  math.rs  mod.rs  noise.rs  operator.rs  param.rs  render.rs  rng.rs  state.rs  system.rs
crates/kirie-render/src/scene/: blend.rs  bloom.rs  bundle.rs  error.rs  extras.rs  fbo.rs  load.rs  matrix.rs  mod.rs  model.rs  pipeline.rs  plan.rs  renderer.rs  scripting.rs  text.rs  texture.rs  uniforms.rs
crates/kirie-render/tests/: corpus.rs  gpu_readback.rs  particle.rs  particle_corpus.rs  scene_corpus.rs  scripting_host.rs  text_corpus.rs
crates/kirie-scene/: CHANGELOG.md  Cargo.toml
crates/kirie-scene/src/: error.rs  lib.rs  material.rs  object.rs  particle.rs  property.rs  resolve.rs  scene.rs  user.rs  value.rs
crates/kirie-scene/tests/: corpus.rs  synthetic.rs
crates/kirie-script/: CHANGELOG.md  Cargo.toml
crates/kirie-script/src/: engine.rs  error.rs  frame.rs  lib.rs  value.rs  world.rs
crates/kirie-script/src/js/: builtins.js  host.js  we_color.js  we_math.js  we_vector.js
crates/kirie-script/tests/: corpus.rs  engine.rs
crates/kirie-shader/: CHANGELOG.md  Cargo.toml
crates/kirie-shader/src/: annotation.rs  coerce.rs  lib.rs  modernize.rs  preprocess.rs  reflect.rs  translate.rs
crates/kirie-shader/tests/: corpus.rs
crates/kirie-video/: CHANGELOG.md  Cargo.toml
crates/kirie-video/examples/: video_layer.rs
crates/kirie-video/src/: audio.rs  clock.rs  decode.rs  error.rs  hw.rs  lib.rs  pacing.rs  player.rs  renderer.rs  scaling.rs
crates/kirie-video/tests/: corpus.rs
crates/kirie-web/: CHANGELOG.md  Cargo.toml  build.rs
crates/kirie-web/src/: backend.rs  hosted.rs  lib.rs  renderer.rs  shim.rs
crates/kirie-web/src/cef/: app.rs  backend.rs  client.rs  mod.rs  registry.rs
crates/kirie-web/src/webview/: backend.rs  mod.rs  surface.rs
crates/kirie-web/tests/: osr_smoke.rs
crates/kirie/src/: detect.rs  extract.rs  info.rs  lib.rs  main.rs
crates/kirie/src/compat/: args.rs  ipc_app.rs  list_props.rs  mod.rs  playlist.rs  resolve.rs  run.rs  screenshot.rs  signals.rs
crates/kirie/tests/: audio.rs  cli.rs  compat.rs  corpus_render.rs
scripts/: img_metrics.py  install.sh  ssim_gate.sh
