[package]
name = "kirie-formats"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Parsers for Wallpaper Engine file formats: scene.pkg archives, .tex textures, project/scene JSON"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
lz4_flex = { workspace = true }
texture2ddecoder = { workspace = true }
image = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
