[package]
name = "kirie-ipc"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Drop-in linux-wallpaperengine control socket (byte-exact protocol per docs/compat-socket.md)"

[dependencies]
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true
