[package]
name = "kirie-scene"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Wallpaper Engine scene.json object model, asset-file parsers, and property resolution"

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
kirie-formats = { workspace = true }

[dev-dependencies]
anyhow = { workspace = true }

[lints]
workspace = true
