[package]
name = "kirie-script"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
rquickjs = { workspace = true, features = ["loader"] }
crossbeam-channel = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
kirie-scene = { path = "../kirie-scene" }
kirie-formats = { workspace = true }

[lints]
workspace = true
