[package]
name = "kirie-shader"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
kirie-formats = { workspace = true }
naga = { workspace = true }
shaderc = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }

[dev-dependencies]
wgpu = { workspace = true, features = ["naga-ir"] }
pollster = { workspace = true }
