[package]
name = "kirie-web"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[features]
# Default build compiles NEITHER CEF nor a webview: `cargo build/test
# --workspace` (no features) must stay green on machines without libcef or
# webkit2gtk. The heavy browser backends are strictly opt-in.
default = []
# Chromium Embedded Framework off-screen-rendering backend. `cef` and
# `cef-dll-sys` are HEAVY (download + cmake-build of libcef); gated so the
# default build never touches them.
cef = ["dep:cef", "dep:cef-dll-sys"]
# wry + system webkit2gtk-4.1 native-surface backend. NOTE: this is a
# native-surface fallback only — wry/webkit2gtk has no off-screen rendering
# path (upstream limitation, won't-fix; see src/webview/mod.rs), so it can
# never implement the composited `WebBackend` trait; prefer `cef`. `wry` links
# `webkit2gtk-4.1`/`libsoup-3.0` via pkg-config at COMPILE time, so this
# feature only builds on a box with those -dev packages; gated so the default
# build never needs them.
webview = ["dep:wry", "dep:raw-window-handle"]

[dependencies]
kirie-platform = { path = "../kirie-platform" }
thiserror = { workspace = true }
tracing = { workspace = true }
wgpu = { workspace = true }
bytemuck = { workspace = true }
arc-swap = { workspace = true }

# Heavy, optional, feature-gated. `default-features = false` drops the crate's
# `sandbox` + `build-util` defaults (neither is needed for OSR) while keeping
# the download + cmake link path (bootstrap notes). The workspace pins the same
# 149 line (`cef = "149"`); it is declared directly here because a
# `{ workspace = true }` ref cannot turn off the workspace entry's default
# features, and the root manifest must not be edited.
cef = { version = "149", default-features = false, optional = true }
cef-dll-sys = { workspace = true, optional = true }

# Heavy, optional, feature-gated (webview backend). `wry` pulls webkit2gtk-sys,
# which needs the system webkit2gtk-4.1 dev package at build time.
wry = { workspace = true, optional = true }
raw-window-handle = { workspace = true, optional = true }

[[bin]]
name = "kirie-cef-helper"
path = "src/bin/kirie-cef-helper.rs"
# The subprocess entrypoint links libcef, so it only exists in the `cef` build.
required-features = ["cef"]

[dev-dependencies]
# PNG encoding for the CEF OSR smoke test (tests/osr_smoke.rs, cef-only).
image = { workspace = true }
